# sparkqlgen

./: .env.example  .gitignore  README.md  TODO_Part1.md  TODO_Part2.md  pyproject.toml
docs/: architecture.md  failures.md
evals/: cases.json  run.py
evals/results/: gpt-5.4-mini.json  gpt-5.4.json  llama3.1_8b.json  openai_gpt-oss-120b.json  summary.md
src/sparqlgen/: agent.py  cache.py  cli.py  commands.py  compaction.py  config.py  hardening.py  prompts.py  providers.py  rendering.py  repl.py  state.py  tools.py  wikidata.py
src/sparqlgen/skills/: __init__.py  aggregation_pattern.md  aggregation_quality.md  clarification.md  core.md  engine_error_recovery.md  fictional.md  injection.md  join_direction.md  key_facts.md  multilingual.md  negation.md  temporal.md  top_n_global.md  typo_recovery.md  verify_resolved_entity.md
tests/: test_backstops.py  test_clarification.py  test_compaction.py  test_hardening.py  test_paper_fixes.py  test_skills.py  test_wikidata_errors.py
