[project]
name = "sparqlgen"
version = "0.1.0"
description = "Claude Code-style interactive CLI agent that converts natural language to SPARQL and queries Wikidata."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Chao-Shiang Chen", email = "chaoshiangchen@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    "openai>=1.50.0",
    "SPARQLWrapper>=2.0.0",
    "rdflib>=7.0.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[project.scripts]
sparqlgen = "sparqlgen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sparqlgen"]

[tool.ruff]
line-length = 100
target-version = "py310"
